add template to app name, seperate more files, fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alpinejs-spa",
+  "name": "alpinejs-spa-template",
   "version": "1.0.0",
   "author": "revert@revert.pl",
   "private": true,
